#257: fix flickering on drop target, fix computation clearing input columns, fix duplicate naming issue

--- a/packages/perspective-viewer/src/less/computed_column.less
+++ b/packages/perspective-viewer/src/less/computed_column.less
@@ -49,7 +49,7 @@
 
         &.psp-cc__error {
             color: #cb4549 !important;
-            width: 110px;
+            display: none;
         }
     }
 
@@ -108,8 +108,9 @@
     #psp-cc-name {
         background-color: #eee;
         border-bottom: 1px solid @border-color;
-        font-size: 12px;
         color: #333;
+        cursor: default !important;
+        font-size: 12px;
         padding-left: 2px;
         width: 100%;
 
@@ -198,6 +199,7 @@
         &.dropping {
             background-color: rgb(240, 240, 255) !important;
             border: 1px solid #1078d1 !important;
+            cursor: copy !important;
 
             perspective-row {
                 display: none !important;
@@ -233,6 +235,10 @@
         align-items: center;
         display: flex;
         margin-top: 5px;
+
+        &.psp-cc__content--nomargin {
+            margin-top: 0;
+        }
     }
 
     #psp-cc-computation__type {
@@ -249,6 +255,7 @@
         padding-top: 4px;
 
         .datetime,
+        .date,
         .boolean {
             color: #999;
         }
